--- a/frontend/src/app/components/usuarios/usuarios-list/usuarios-list.component.html
+++ b/frontend/src/app/components/usuarios/usuarios-list/usuarios-list.component.html
@@ -217,7 +217,7 @@
             </div>
           </div>
 
-          <div class="invalid" *ngIf="createSubmitted && createForm.errors?.matching">
+          <div class="invalid" *ngIf="createSubmitted && createForm.errors?.['matching']">
             Las contraseñas no coinciden.
           </div>
 
